# zellij-send-keys

./: Cargo.toml  LICENSE  README.md  demo.tape
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  dependency-review.yml  pinact.yml  release.yml
examples/: coaching-staff.kdl  corporate.kdl  soccer-team.kdl
layouts/: multiagent.kdl
scripts/: send-task.sh  send-to-assistant  send-to-coach  send-to-coaching  send-to-coordinator  send-to-qa-lead  send-to-reviewer  send-to-tactician  send-to-tester  send-to-worker-a  send-to-worker-b  setup-coaching-staff.sh  setup-env.sh
src/: lib.rs  main.rs
