[package]
name = "zellij-send-keys"
version = "0.2.0"
edition = "2021"
description = "A zellij plugin to send keys to specific panes (like tmux send-keys)"
license = "MIT"
repository = "https://github.com/atani/zellij-send-keys"
keywords = ["zellij", "plugin", "terminal", "multiplexer"]
categories = ["command-line-utilities"]

[dependencies]
zellij-tile = "0.43.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
