[package]
name = "zellij-send-keys"
version = "0.3.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["atani"]
description = "A zellij plugin to send keys to specific panes (like tmux send-keys)"
license = "MIT"
repository = "https://github.com/atani/zellij-send-keys"
keywords = ["zellij", "plugin", "terminal", "multiplexer"]
categories = ["command-line-utilities"]

[dependencies]
zellij-tile = "0.44.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
